// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login renders correctly 1`] = `
<div
  className="css-1wbtahv-AuthInfoWrapper"
>
  <div
    className="css-ckllkv-Columns"
  >
    <div
      className="css-18pleri-Column"
    >
      <div
        className="css-1awm4tn-InfoColumn"
      />
      <div
        className="css-1oixvr1-InfoColumn"
      >
        <img
          alt="Luca"
          className="css-oh52jr-InfoColumn"
        />
        <div
          className="css-1t7fkkr-Text"
        >
          welcome_headline
        </div>
        <div
          className="css-1t7fkkr-Text"
        >
          welcome_text
        </div>
        <div
          className="css-1jx8kzv-InfoColumn"
        >
          <div
            className="css-1dfs145"
            data-testid="custom-select"
          >
            <div
              className="css-0"
            />
            <div
              className="css-18vooac"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="custom-select css-b62m3t-container"
                onKeyDown={[Function]}
              >
                <span
                  className="css-1f43avz-a11yText-A11yText"
                  id="react-select-2-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  className="css-1f43avz-a11yText-A11yText"
                />
                <div
                  className=" css-hup9wf-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className=" css-1fdsijx-ValueContainer"
                  >
                    <div
                      className="single-value css-10zrvlj-singleValue"
                    >
                      <div
                        className="css-1lrzij5-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                      />
                      lang_de
                    </div>
                    <input
                      aria-autocomplete="list"
                      aria-expanded={false}
                      aria-haspopup={true}
                      aria-readonly={true}
                      className="css-mohuvp-dummyInput-DummyInput"
                      disabled={false}
                      id="react-select-2-input"
                      inputMode="none"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      tabIndex={0}
                      value=""
                    />
                  </div>
                  <div
                    className=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className=" css-1uei4ir-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className=" css-1xc3v61-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <div
                        className="css-1o97vu0-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1ib2lt7-Text"
          >
            v0.0.0
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-8vbwfs-Column"
    >
      <div
        className="css-7uigyc-Text"
      >
        welcome_office
      </div>
      <div
        className="css-7uigyc-Text"
      >
        welcome_office_text
      </div>
    </div>
  </div>
</div>
`;

exports[`Login renders correctly loading 1`] = `
<div
  className="css-1wbtahv-AuthInfoWrapper"
>
  <div
    className="css-ckllkv-Columns"
  >
    <div
      className="css-18pleri-Column"
    >
      <div
        className="css-1awm4tn-InfoColumn"
      />
      <div
        className="css-1oixvr1-InfoColumn"
      >
        <img
          alt="Luca"
          className="css-oh52jr-InfoColumn"
        />
        <div
          className="css-1t7fkkr-Text"
        >
          welcome_headline
        </div>
        <div
          className="css-1t7fkkr-Text"
        >
          welcome_text
        </div>
        <div
          className="css-1jx8kzv-InfoColumn"
        >
          <div
            className="css-1dfs145"
            data-testid="custom-select"
          >
            <div
              className="css-0"
            />
            <div
              className="css-18vooac"
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="custom-select css-b62m3t-container"
                onKeyDown={[Function]}
              >
                <span
                  className="css-1f43avz-a11yText-A11yText"
                  id="react-select-3-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  className="css-1f43avz-a11yText-A11yText"
                />
                <div
                  className=" css-hup9wf-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className=" css-1fdsijx-ValueContainer"
                  >
                    <div
                      className="single-value css-10zrvlj-singleValue"
                    >
                      <div
                        className="css-1lrzij5-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                      />
                      lang_de
                    </div>
                    <input
                      aria-autocomplete="list"
                      aria-expanded={false}
                      aria-haspopup={true}
                      aria-readonly={true}
                      className="css-mohuvp-dummyInput-DummyInput"
                      disabled={false}
                      id="react-select-3-input"
                      inputMode="none"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      tabIndex={0}
                      value=""
                    />
                  </div>
                  <div
                    className=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className=" css-1uei4ir-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className=" css-1xc3v61-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <div
                        className="css-1o97vu0-Icon"
                        dangerouslySetInnerHTML={
                          {
                            "__html": {},
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="css-1ib2lt7-Text"
          >
            v0.0.0
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-8vbwfs-Column"
    >
      <div
        className="css-7uigyc-Text"
      >
        welcome_office
      </div>
      <div
        className="css-7uigyc-Text"
      >
        welcome_office_text
      </div>
    </div>
  </div>
</div>
`;
